# Vleer

./: .gitignore  Cargo.toml  DiscordRPC.ts  LICENSE  README.md  app.vue  bun.lockb  musicHandler.ts  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/: build.yml
.github/workflows/: build.yml  main.yml  nightly.yml  node.js.yml  rust.yml
assets/images/: icon.icns
assets/styles/: _variables.scss  default_layout.scss  global.scss  index.scss  library.scss  navigation.scss  pages.scss  player.scss  search.scss  titlebar.scss
assets/styles/components/: library.scss  navbar.scss  pages.scss  player.scss  titlebar.scss
assets/styles/layouts/: default_layout.scss
assets/styles/pages/: create-playlist.scss  index.scss  playlist.scss  search.scss  settings.scss  songs.scss
components/: ContextMenu.vue  Library.vue  Navbar.vue  Navigation.vue  Pages.vue  Player.vue  Titlebar.vue  player.vue  search.vue  sidebar.vue  titlebar.vue
components/icons/: Add.vue  Lenght.vue  Pause.vue  Play.vue  Repeat.vue  Rewind.vue  Search.vue  Shuffle.vue  Skip.vue  VolumeLoud.vue  VolumeMid.vue  VolumeMute.vue
components/icons/Nav/: HomeOutline.vue  SearchFill.vue  SearchOutline.vue  SettingsOutline.vue
components/icons/Pages/: HomeFill.vue  SettingsFill.vue  SongsOutline.vue
components/icons/Player/: Play.vue  VolumeMute.vue
css/: general.css  index.scss  library.scss  main.css  media.css  miniplayer.css  navigation.scss  player.css  player.scss  search.css  search.scss  settings.css  sidebar.css  style.css  titlebar.css
layouts/: default.vue  page.vue  search.vue
lib/: Config.ts  DiscordRPC.ts  Download.ts  Player.ts  Search.ts
migrations/: 20251112135450_init.sql
pages/: [playlist].vue  albums.vue  artists.vue  create-playlist.vue  index.vue  library.vue  liked-songs.vue  playlists.vue  search.vue  settings.vue  songs.vue  test.vue
pages/playlists/: [playlist].vue
plugins/: music.ts  player.ts  settings.ts
server/: index.js  package.json
server/api/: download.js  search.js
services/: db.ts
src/: main.rs
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  discord_rpc.rs  downloader.rs  main.rs  migration.rs  music_handler.rs
src-tauri/src/api/: commands.rs  discord_rpc.rs  mod.rs  updater.rs
src-tauri/src/db/: database.rs  migration.rs  mod.rs  music.rs  settings.rs  types.rs
src-tauri/src/db/migrations/: v1.sql
src-tauri/src/macos/: mod.rs  window_ext.rs
src-tauri/src/utils/: commands.rs  discord_rpc.rs
src/data/: config.rs  db.rs  metadata.rs  mod.rs  scan.rs  scanner.rs  settings.rs  types.rs
src/media/: equalizer.rs  mod.rs  normalization.rs  playback.rs  queue.rs  scanner.rs
src/ui/: app.rs  mod.rs  utils.rs  variables.rs
src/ui/assets/: bundled.rs  mod.rs
src/ui/components/: button.rs  mod.rs  nav_button.rs  slider.rs  title.rs
src/ui/components/icons/: icon.rs  icons.rs  mod.rs
src/ui/layout/: library.rs  mod.rs  navbar.rs  player.rs
src/ui/views/: home.rs  mod.rs  songs.rs
stores/: music.ts  settings.ts
types/: definitions.ts  music.ts  types.ts
