[package]
name = "vleer"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.3.1"
anyhow = "1.0.100"
directories = "6.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
cuid2 = "0.1.4"
url = "2.5.7"
rust-embed = "8.9.0"