[package]
name = "vleer"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-macros = "0.2.2"
gpui-component = "0.4.1"
anyhow = "1.0.100"
dirs = "6.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
rodio = { version = "0.21.1", features = ["symphonia-all"] }
cuid2 = "0.1.4"
url = "2.5.7"
rust-embed = "8.9.0"
lofty = "0.22.4"
walkdir = "2.5.0"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"

[package.metadata.packager]
before_packaging_command = "cargo build --release"
product_name = "Vleer"
identifier = "app.vleerapp.vleer"
icons = ["assets/images/icon.png", "assets/images/icon.icns"]
out_dir = "target/release/bundles"